--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "GodfatherX HERE.",
-    "logo": "https://telegra.ph/file/3ee5c13390412705edda4.jpg",
+    "name": "𖤍🇦𝐅𝐊 ✘ 𝐅𝐮𝐜𝐤𝐞𝐫𝐬.",
+    "logo": "https://telegra.ph/file/c576171a46305e51f85c7.jpg",
     "keywords": [
         "telegram",
         "telethon",
@@ -8,7 +8,7 @@
         "PythonX",
         "SpamBots"
     ],
-    "repository": "https://github.com/mrtosumemon/GODFATHER_SPAM2.1",
+    "repository": "https://github.com/shashi535357227/GODFATHER_SPAM2.1",
     "env": {
      "CMD_HNDLR": {
             "description": "Custom command handler.",
